--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
             </a>
             <div class="nav-menu">
                 <a href="#services" class="nav-link"><i class="fas fa-wrench"></i> Nos Services</a>
-                <a href="#about" class="nav-link"><i class="fas fa-info-circle"></i> À Propos</a>
                 <a href="#zone" class="nav-link"><i class="fas fa-map-marker-alt"></i> Zone d'Intervention</a>
                 <a href="#contact" class="nav-link"><i class="fas fa-envelope"></i> Contact</a>
             </div>
@@ -58,13 +57,11 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <div class="hero-overlay"></div>
+        <div class="hero-overlay" style="background-image: url('images/securite-de-voiture-conseils-pour-vous-eviter-le-vol-de-votre-vehicule-1536x1024.jpg');"></div>
         <div class="container">
-            <h1 class="animate-on-scroll">Serrurier Automobile aux Ponts-de-Cé</h1>
-            <p class="animate-on-scroll">Intervention rapide 24/7 - Reproduction de clés - Ouverture de véhicule</p>
-            <a href="tel:0786174882" class="cta-button animate-on-scroll">
-                <i class="fas fa-phone"></i> Appeler Maintenant
-            </a>
+            <h1>ESL PROG - Votre Serrurier Automobile de Confiance</h1>
+            <p>Spécialiste en serrurerie automobile aux Ponts-de-Cé et ses environs. Notre expertise couvre tous vos besoins : reproduction de clés, ouverture de véhicule, dépannage d'urgence 24/7. Nous intervenons sur toutes les marques avec des techniques professionnelles non destructives. Notre engagement : rapidité, efficacité et transparence pour votre sécurité automobile.</p>
+            <a href="#contact" class="cta-button">Contactez-nous pour une intervention rapide</a>
         </div>
     </section>
 
